--- a/templates/check_box.html
+++ b/templates/check_box.html
@@ -9,10 +9,10 @@
 <body>
 <form method="POST" action="/transformation_count">
     <p>DB credentials: For example: ADAPTERCONF/ADAPTERCONF@10.234.38.117:1521/PLDACE11</p>
-    <input type="text" name="username" placeholder="username"/>
-    <input type="text" name="password" placeholder="password"/>
-    <input type="text" name="hostname" placeholder="hostname"/>
-    <input type="text" name="port" placeholder="port"/>
+    <input type="text" name="username" placeholder="username"/> /
+    <input type="text" name="password" placeholder="password"/> @
+    <input type="text" name="hostname" placeholder="hostname"/> :
+    <input type="text" name="port" placeholder="port"/> /
     <input type="text" name="SID" placeholder="SID"/>
     <p>Output file name: <input type="text" name="output_file"/></p>
     <p>AH_ProVision<input type="checkbox" value="AH_ProVision" name="nms"></p>
