--- a/templates/sync_ids.html
+++ b/templates/sync_ids.html
@@ -17,6 +17,7 @@
   }
 
 
+
 </script>
 
 
@@ -25,10 +26,10 @@
     <form action='/sync_diffs' method="post">
         <div id="wrapper">
             <p>DB credentials: For example: ADAPTERCONF/ADAPTERCONF@10.234.38.117:1521/PLDACE11</p>
-            <input type="text" name="username" placeholder="username"/>
-            <input type="text" name="password" placeholder="password"/>
-            <input type="text" name="hostname" placeholder="hostname"/>
-            <input type="text" name="port" placeholder="port"/>
+            <input type="text" name="username" placeholder="username"/> /
+            <input type="text" name="password" placeholder="password"/> @
+            <input type="text" name="hostname" placeholder="hostname"/> :
+            <input type="text" name="port" placeholder="port"/> /
             <input type="text" name="SID" placeholder="SID"/>
             <p>Output file name: <input type="text" name="output_file"/></p>
             <h2>Sync ids:</h2>
