--- a/templates/check_box.html
+++ b/templates/check_box.html
@@ -9,12 +9,12 @@
 <body>
 <form method="POST" action="/transformation_count">
     <p>DB credentials: For example: ADAPTERCONF/ADAPTERCONF@10.234.38.117:1521/PLDACE11</p>
-    <input type="text" name="username" placeholder="username"/> /
-    <input type="text" name="password" placeholder="password"/> @
-    <input type="text" name="hostname" placeholder="hostname"/> :
-    <input type="text" name="port" placeholder="port"/> /
-    <input type="text" name="SID" placeholder="SID"/>
-    <p>Output file name: <input type="text" name="output_file"/></p>
+    <input type="text" name="username" placeholder="username" required/> <b> / </b>
+    <input type="text" name="password" placeholder="password" required/> <b> @ </b>
+    <input type="text" name="hostname" placeholder="hostname" required/> <b> : </b>
+    <input type="text" name="port" placeholder="port" required/> <b> / </b>
+    <input type="text" name="SID" placeholder="SID" required/>
+    <p>Output file name: <input type="text" name="output_file" required/></p>
     <p>AH_ProVision<input type="checkbox" value="AH_ProVision" name="nms"></p>
     <p>Ciena_Legacy<input type="checkbox" value="Ciena_Legacy" name="nms"></p>
     <p>Cisco_EPNM (N4I/BNG)<input type="checkbox" value="Cisco_EPNM (N4I/BNG)" name="nms"></p>
