--- a/templates/sync_ids.html
+++ b/templates/sync_ids.html
@@ -7,7 +7,7 @@
     field_div = document.getElementById("field_div");
     new_input = "<li id='input_text"+total_text+
     "_wrapper'><input type='text' class='input_text' name='input_text[]' id='input_text"+
-    total_text+"' placeholder='Enter Text'></li>";
+    total_text+"' placeholder='Enter Sync process id'></li>";
     field_div.insertAdjacentHTML('beforeend',new_input);
   }
   function remove_field()
@@ -16,25 +16,23 @@
     document.getElementById("input_text"+total_text.length+"_wrapper").remove();
   }
 
-
-
 </script>
 
 
 <div class="container">
-    <!--  <h1>Give the words</h1>-->
     <form action='/sync_diffs' method="post">
         <div id="wrapper">
             <p>DB credentials: For example: ADAPTERCONF/ADAPTERCONF@10.234.38.117:1521/PLDACE11</p>
-            <input type="text" name="username" placeholder="username"/> /
-            <input type="text" name="password" placeholder="password"/> @
-            <input type="text" name="hostname" placeholder="hostname"/> :
-            <input type="text" name="port" placeholder="port"/> /
-            <input type="text" name="SID" placeholder="SID"/>
-            <p>Output file name: <input type="text" name="output_file"/></p>
+            <p>DB credentials: For example: ADAPTERCONF/ADAPTERCONF@10.234.38.117:1521/PLDACE11</p>
+            <input type="text" name="username" placeholder="username" required/> <b> / </b>
+            <input type="text" name="password" placeholder="password" required/> <b> @ </b>
+            <input type="text" name="hostname" placeholder="hostname" required/> <b> : </b>
+            <input type="text" name="port" placeholder="port" required/> <b> / </b>
+            <input type="text" name="SID" placeholder="SID" required/>
+            <p>Output file name: <input type="text" name="output_file" required/></p>
             <h2>Sync ids:</h2>
-            <input type="button" value="Add TextBox" onclick="add_field();">
-            <input type="button" value="Remove TextBox" onclick="remove_field();">
+            <input type="button" value="Add Sync process id" onclick="add_field();">
+            <input type="button" value="Remove Sync process id" onclick="remove_field();">
             <ol id="field_div">
 
             </ol>
