added new tool - sync process ids

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -8,6 +8,11 @@
 <h1>Welcome!</h1>
 <h2>Pick the desired tool:</h2>
 <p>
+    <a href="/sync_process_ids/">
+        <button>Sync Process ids</button>
+    </a>
+</p>
+<p>
     <a href="/sync_diffs/">
         <button>Sync diffs</button>
     </a></p>
@@ -15,6 +20,6 @@
     <a href="/transformation_count/">
         <button>Transformation Count</button>
     </a>
-</p>
+
 </body>
 </html>
